@@ -1,5 +1,31 @@
-#ifndef OPENMS_TRANSFORMATIONS_FEATUREFINDER_FeatureFinderAlgorithmWatershed_H
-#define OPENMS_TRANSFORMATIONS_FEATUREFINDER_FeatureFinderAlgorithmWatershed_H
+// -*- Mode: C++; tab-width: 2; -*-
+// vi: set ts=2:
+//
+// --------------------------------------------------------------------------
+//                   OpenMS Mass Spectrometry Framework
+// --------------------------------------------------------------------------
+//  Copyright (C) 2003-2008 -- Oliver Kohlbacher, Knut Reinert
+//
+//  This library is free software; you can redistribute it and/or
+//  modify it under the terms of the GNU Lesser General Public
+//  License as published by the Free Software Foundation; either
+//  version 2.1 of the License, or (at your option) any later version.
+//
+//  This library is distributed in the hope that it will be useful,
+//  but WITHOUT ANY WARRANTY; without even the implied warranty of
+//  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+//  Lesser General Public License for more details.
+//
+//  You should have received a copy of the GNU Lesser General Public
+//  License along with this library; if not, write to the Free Software
+//  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+//
+// --------------------------------------------------------------------------
+// $Maintainer: Dominik Damerow $
+// --------------------------------------------------------------------------
+
+#ifndef OPENMS_TRANSFORMATIONS_FEATUREFINDER_FEATUREFINDERALGORITHMWATERSHED_H
+#define OPENMS_TRANSFORMATIONS_FEATUREFINDER_FEATUREFINDERALGORITHMWATERSHED_H
 
 #include <OpenMS/TRANSFORMATIONS/FEATUREFINDER/FeatureFinderAlgorithm.h>
 #include <OpenMS/MATH/MISC/LinearInterpolation.h>
@@ -86,6 +112,8 @@ namespace OpenMS
       }
       virtual void run()
       {
+        features_->clear();
+        
         //Label constants
         const Int FICTIOUS = -3;
         const Int MASK = -2;
@@ -437,4 +465,4 @@ namespace OpenMS
       FeatureFinderAlgorithmWatershed(const FeatureFinderAlgorithmWatershed&);
   };// FeatureFinderAlgorithmWatershed
 }// namespace OpenMS
-#endif // OPENMS_TRANSFORMATIONS_FEATUREFINDER_FeatureFinderAlgorithmWatershed_H
+#endif // OPENMS_TRANSFORMATIONS_FEATUREFINDER_FEATUREFINDERALGORITHMWATERSHED_H
