@@ -361,13 +361,6 @@ namespace OpenMS
 	void OMSSAXMLFile::readMappingFile_()
 	{
 		String file = File::find("CHEMISTRY/OMSSA_modification_mapping");
-            
-    //try to open file
-    if (!File::exists(file))
-    {
-      throw Exception::FileNotFound(__FILE__, __LINE__, __PRETTY_FUNCTION__, "CHEMISTRY/OMSSA_modification_mapping");
-    }
-
 		TextFile infile(file);
 		
 		for (TextFile::ConstIterator it = infile.begin(); it != infile.end(); ++it)
