@@ -158,6 +158,10 @@ namespace OpenMS
 			}
 		}
 		
+		//if the file was not found, throw an exception
+		throw Exception::FileNotFound(__FILE__,__LINE__,__PRETTY_FUNCTION__,filename);
+		
+		//this is never reached, but needs to be there to avoid compiler warnings
 		return "";
 	}
 	
